syntax = "proto3";

option csharp_namespace = "MoonMQ.Core";

package MoonMQGrpc;

service MoonMQService {
  rpc AppendEntries (AppendEntriesMessage) returns (MoonResult);
  rpc RequestVote (RequestVoteMessage) returns (MoonResult);
}

message Record{
  int32 index = 1;
  int64 position = 2;
  int32 length = 3;
  int64 timestamp = 4;
  int32 term = 5;
}

message AppendEntriesMessage {
  int32 term = 1;
  string leader_id = 2;
  int32 prev_log_index = 3;
  int32 prev_log_term = 4;
  int32 leader_commit = 5;
  repeated Record records = 6;
}

message RequestVoteMessage{
  int32 term = 1;
  string candidateId = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message MoonResult {
  int32 term = 1;
  bool success = 2;
}
